--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="Logo-192.png" />
+    <link rel="apple-touch-icon" href="Logo-512.png" />
     <title>Reporte cuidadano</title>
   </head>
   <body>
